# production-python-template

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  copier.yaml  pyproject.toml
copier/questions/: core.yaml  test.yaml
copier/settings/: base.yaml  files.yaml  messages.yaml  migrations.yaml  tasks.yaml
template/: .gitignore
